*** empty log message ***

--- a/demo/Makefile.am
+++ b/demo/Makefile.am
@@ -17,16 +17,16 @@ libhello_la_LDFLAGS = -version-info 3:12:1
 
 include_HEADERS = foo.h
 
-bin_PROGRAMS = hell hell.static helldl
+bin_PROGRAMS = hell hell.debug helldl
 
 # Build hell from main.c and libhello.la
 hell_SOURCES = main.c
 hell_LDADD = libhello.la
 
-# Create a statically-linked version of hell.
-hell_static_SOURCES = main.c
-hell_static_LDADD = libhello.la
-hell_static_LDFLAGS = -static
+# Create an easier-to-debug version of hell.
+hell_debug_SOURCES = main.c
+hell_debug_LDADD = libhello.la
+hell_debug_LDFLAGS = -static
 
 # Create a version of hell that does a preloaded dlopen.
 helldl_SOURCES = dlmain.c
