--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -13,4 +13,4 @@ EXTRA_DIST = defs tlibtool $(TESTS)
 # We need to remove any files that the above tests created.
 clean-local:
 	-test -f ../demo/Makefile && cd ../demo && $(MAKE) distclean
-	rm -rf =inst
+	rm -rf _inst
