*** empty log message ***

--- a/demo/Makefile.am
+++ b/demo/Makefile.am
@@ -34,7 +34,7 @@ helldl_LDFLAGS = -export-dynamic -dlpreopen libhello.la
 
 # Unfortunately, in order to test libtool thoroughly, we need access
 # to its private directory.
-objdir = `sed -n -e 's/^objdir="\(.*\)"$$/\1/p' ./libtool`
+objdir = `sed -n -e 's/^objdir=\"\(.*\)\"$$/\1/p' ./libtool`
 
 TESTS = run.test
 
